k8s/ingress/01-namespace.yaml
# 01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
