k8s/ingress/03-ingress.yaml
# 03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
  namespace: djangok8s
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app1.smartdev.cl
    secretName: prod-tls
  rules:
  - host: app1.smartdev.cl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: djangok8s-service
            port:
              number: 80
